#2313 Refactor imperative code into functional