@@ -1,40 +1,44 @@
 package ua.com.fielden.platform.eql.stage1;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.unmodifiableList;
-import static ua.com.fielden.platform.entity.AbstractEntity.ID;
-import static ua.com.fielden.platform.utils.EntityUtils.isPersistedEntityType;
+import com.google.common.collect.ImmutableList;
+import ua.com.fielden.platform.eql.meta.query.AbstractQuerySourceItem;
 
 import java.util.ArrayList;
 import java.util.List;
 
-import ua.com.fielden.platform.eql.meta.query.AbstractQuerySourceItem;
+import static java.util.Collections.unmodifiableList;
+import static ua.com.fielden.platform.entity.AbstractEntity.ID;
+import static ua.com.fielden.platform.utils.EntityUtils.isPersistedEntityType;
+import static ua.com.fielden.platform.utils.EntityUtils.splitPropPath;
 
 public class PropResolutionProgress {
-    private final List<AbstractQuerySourceItem<?>> resolved = new ArrayList<>();
-    private final List<String> pending = new ArrayList<>();
+    private final List<AbstractQuerySourceItem<?>> resolved;
+    private final List<String> pending;
 
     public PropResolutionProgress(final String pendingAsOneDotNotatedProp) {
-        this.pending.addAll(asList(pendingAsOneDotNotatedProp.split("\\.")));
+        this.pending = splitPropPath(pendingAsOneDotNotatedProp);
+        this.resolved = ImmutableList.of();
     }
 
     private PropResolutionProgress(final List<String> pending, final List<AbstractQuerySourceItem<?>> resolved) {
-        this.pending.addAll(pending);
-        this.resolved.addAll(resolved);
+        this.pending = pending;
+        this.resolved = resolved;
     }
 
     public PropResolutionProgress registerResolutionAndClone(final AbstractQuerySourceItem<?> propResolutionStep) {
-        final List<AbstractQuerySourceItem<?>> updatedResolved = new ArrayList<>(resolved);
-        updatedResolved.add(propResolutionStep);
+        final var updatedResolved = ImmutableList. <AbstractQuerySourceItem<?>> builderWithExpectedSize(resolved.size() + 1)
+                .addAll(resolved)
+                .add(propResolutionStep)
+                .build();
         return new PropResolutionProgress(pending.subList(1, pending.size()), updatedResolved);
     }
 
     public List<AbstractQuerySourceItem<?>> getResolved() {
-        return unmodifiableList(resolved);
+        return resolved;
     }
 
     public String getNextPending() {
-        return pending.get(0);
+        return pending.getFirst();
     }
 
     public boolean isSuccessful() {
@@ -42,11 +46,11 @@ public class PropResolutionProgress {
     }
 
     private boolean lastPendingIsId() {
-        return pending.size() == 1 && pending.get(0).equals(ID);
+        return pending.size() == 1 && pending.getFirst().equals(ID);
     }
 
     private boolean lastResolvedHasPersistentEntityType() {
         // by ensuring that part preceding ID is not just entity, but persistent entity it is achieved that implicit calc-prop of ID on an union entity is not skipped here
-        return !resolved.isEmpty() && isPersistedEntityType(resolved.get(resolved.size() - 1).javaType());
+        return !resolved.isEmpty() && isPersistedEntityType(resolved.getLast().javaType());
     }
 }
