@@ -1,16 +1,15 @@
 package ua.com.fielden.platform.eql.stage1.operands;
 
+import static com.google.common.collect.ImmutableList.toImmutableList;
 import static java.lang.String.format;
 import static java.util.Collections.emptySet;
 import static ua.com.fielden.platform.entity.AbstractEntity.ID;
+import static ua.com.fielden.platform.utils.CollectionUtil.first;
 import static ua.com.fielden.platform.utils.EntityUtils.isEntityType;
 
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
 
+import com.google.common.collect.ImmutableList;
 import ua.com.fielden.platform.entity.AbstractEntity;
 import ua.com.fielden.platform.eql.exceptions.EqlStage1ProcessingException;
 import ua.com.fielden.platform.eql.meta.query.AbstractQuerySourceItem;
@@ -21,6 +20,9 @@ import ua.com.fielden.platform.eql.stage1.TransformationContextFromStage1To2;
 import ua.com.fielden.platform.eql.stage2.operands.Prop2;
 import ua.com.fielden.platform.eql.stage2.sources.ISource2;
 import ua.com.fielden.platform.eql.stage3.sources.ISource3;
+import ua.com.fielden.platform.utils.CollectionUtil;
+
+import javax.annotation.Nullable;
 
 public class Prop1 implements ISingleOperand1<Prop2> {
 
@@ -36,36 +38,38 @@ public class Prop1 implements ISingleOperand1<Prop2> {
 
     @Override
     public Prop2 transform(final TransformationContextFromStage1To2 context) {
-
-        final Iterator<List<ISource2<? extends ISource3>>> it = context.sourcesForNestedQueries.iterator();
-        if (external) {
-            it.next();
-        }
-
-        while (it.hasNext()) {
-            final List<ISource2<? extends ISource3>> item = it.next();
-            final PropResolution resolution = resolveProp(item, this);
-            if (resolution != null) {
-                final boolean shouldBeTreatedAsId = propPath.endsWith("." + ID) && isEntityType(resolution.lastPart().javaType());
-                return new Prop2(resolution.source, enhancePath(resolution.getPath()), shouldBeTreatedAsId);
-            }
-        }
-
-        throw new EqlStage1ProcessingException(ERR_CANNOT_RESOLVE_PROPERTY.formatted(propPath));
+        return context.sourcesForNestedQueries.stream()
+                .skip(external ? 1 : 0)
+                .map(item -> resolveProp(item, this))
+                .flatMap(Optional::stream)
+                .map(resolution -> {
+                    final var shouldBeTreatedAsId = propPath.endsWith("." + ID) && isEntityType(resolution.lastPart().javaType());
+                    return new Prop2(resolution.source, enhancePath(resolution.getPath()), shouldBeTreatedAsId);
+                })
+                .findFirst()
+                .orElseThrow(() -> new EqlStage1ProcessingException(ERR_CANNOT_RESOLVE_PROPERTY.formatted(propPath)));
     }
 
-    public static final List<AbstractQuerySourceItem<?>> enhancePath(final List<AbstractQuerySourceItem<?>> originalPath) {
-        final AbstractQuerySourceItem<?> lastResolutionItem = originalPath.get(originalPath.size() - 1);
-        if (lastResolutionItem instanceof QuerySourceItemForComponentType<?> lastResolutionItemAsComponent && lastResolutionItemAsComponent.getSubitems().size() == 1) {
-            final List<AbstractQuerySourceItem<?>> enhancedPath = new ArrayList<>(originalPath);
-            final AbstractQuerySourceItem<?> autoResolvedItem = lastResolutionItemAsComponent.getSubitems().values().iterator().next();
-            enhancedPath.add(autoResolvedItem);
-            return enhancedPath;
+    /**
+     * If the given path ends with a component type that has a single property, appends that property onto the path.
+     * Otherwise, returns the given path.
+     *
+     * @return a new enhanced path or the same path
+     */
+    public static List<AbstractQuerySourceItem<?>> enhancePath(final List<AbstractQuerySourceItem<?>> originalPath) {
+        if (originalPath.getLast() instanceof QuerySourceItemForComponentType<?> lastResolutionItemAsComponent && lastResolutionItemAsComponent.getSubitems().size() == 1) {
+            final var autoResolvedItem = first(lastResolutionItemAsComponent.getSubitems().values()).orElseThrow();
+            return ImmutableList. <AbstractQuerySourceItem<?>> builder()
+                    .addAll(originalPath)
+                    .add(autoResolvedItem)
+                    .build();
         }
-        return originalPath;
+        else {
+            return originalPath;
+        }
     }
 
-    public static PropResolution resolvePropAgainstSource(final ISource2<? extends ISource3> source, final Prop1 prop) {
+    public static @Nullable PropResolution resolvePropAgainstSource(final ISource2<? extends ISource3> source, final Prop1 prop) {
         final PropResolutionProgress asIsResolution = source.querySourceInfo().resolve(new PropResolutionProgress(prop.propPath));
         if (source.alias() != null && (prop.propPath.startsWith(source.alias() + ".") || prop.propPath.equals(source.alias()))) {
             final String aliaslessPropName = prop.propPath.equals(source.alias()) ? ID : prop.propPath.substring(source.alias().length() + 1);
@@ -74,27 +78,27 @@ public class Prop1 implements ISingleOperand1<Prop2> {
                 if (!asIsResolution.isSuccessful()) {
                     return new PropResolution(source, aliaslessResolution.getResolved());
                 } else {
-                    throw new EqlStage1ProcessingException(format("Ambiguity while resolving prop [%s]. Both [%s] and [%s] are resolvable against the given source.", prop.propPath, prop.propPath, aliaslessPropName));
+                    throw new EqlStage1ProcessingException(format(
+                            "Ambiguity while resolving property [%s] against [%s]. Both [%s] and [%s] are resolvable.",
+                            prop.propPath, source, prop.propPath, aliaslessPropName));
                 }
             }
         }
         return asIsResolution.isSuccessful() ? new PropResolution(source, asIsResolution.getResolved()) : null;
     }
 
-    private static PropResolution resolveProp(final List<ISource2<? extends ISource3>> sources, final Prop1 prop) {
-        final List<PropResolution> result = new ArrayList<>();
-        for (final ISource2<? extends ISource3> source : sources) {
-            final PropResolution resolution = resolvePropAgainstSource(source, prop);
-            if (resolution != null) {
-                result.add(resolution);
-            }
-        }
+    private static Optional<PropResolution> resolveProp(final List<ISource2<? extends ISource3>> sources, final Prop1 prop) {
+        final List<PropResolution> result = sources.stream()
+                .map(source -> resolvePropAgainstSource(source, prop))
+                .filter(Objects::nonNull)
+                .limit(2)
+                .collect(toImmutableList());
 
         if (result.size() > 1) {
-            throw new EqlStage1ProcessingException(format("Ambiguity while resolving prop [%s]", prop.propPath));
+            throw new EqlStage1ProcessingException(format("Ambiguity while resolving property [%s]", prop.propPath));
         }
 
-        return result.size() == 1 ? result.get(0) : null;
+        return first(result);
     }
 
     @Override
